--- a/package.json
+++ b/package.json
@@ -10,10 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.81.4",
+    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/native": "^7.1.17",
+    "buffer": "^6.0.3",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "@react-native/new-app-screen": "0.81.4",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-blob-util": "^0.22.2",
+    "react-native-bluetooth-escpos-printer": "^0.0.5",
+    "react-native-canvas": "^0.1.40",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-ping": "^1.2.8",
+    "react-native-reanimated": "^3.19.1",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-thermal-receipt-printer-image-qr": "^0.1.12",
+    "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
