--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@point-of-sale/receipt-printer-encoder": "^3.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "buffer": "^6.0.3",
+    "esc-pos-encoder": "^3.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-blob-util": "^0.22.2",
-    "react-native-bluetooth-escpos-printer": "^0.0.5",
+    "react-native-bluetooth-classic": "^1.73.0-rc.15",
     "react-native-canvas": "^0.1.40",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
@@ -27,6 +29,7 @@
     "react-native-reanimated": "^3.19.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-tcp-socket": "^6.3.0",
     "react-native-thermal-receipt-printer-image-qr": "^0.1.12",
     "react-native-webview": "^13.16.0"
   },
@@ -41,6 +44,7 @@
     "@react-native/eslint-config": "0.81.4",
     "@react-native/metro-config": "0.81.4",
     "@react-native/typescript-config": "0.81.4",
+    "@types/esc-pos-encoder": "^1.3.4",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
