--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-screens": "^4.16.0",
     "react-native-tcp-socket": "^6.3.0",
     "react-native-thermal-receipt-printer-image-qr": "^0.1.12",
-    "react-native-webview": "^13.16.0"
+    "react-native-webview": "^13.16.0",
+    "upng-js": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -48,6 +49,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "@types/upng-js": "^2.1.5",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
